k8s/base/07-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: ai-api
  namespace: ai-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-api
  template:
    metadata:
      labels:
        app: ai-api
    spec:
      containers:
        - name: ai-api
          image: bilalguirre/ai-api:v1
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "400m"
              memory: "400Mi"
            limits:
              cpu: "600m"
              memory: "768Mi"
