k8s/base/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-api-ingress
  namespace: ai-app
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  rules:
    - host: local.ai-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - local.ai-api
      secretName: ai-api-tls
